--- a/Resources/Maps/_CP14/comoss.yml
+++ b/Resources/Maps/_CP14/comoss.yml
@@ -2696,6 +2696,16 @@ entities:
       parent: 2
 - proto: CP14BarrelWater
   entities:
+  - uid: 458
+    components:
+    - type: Transform
+      pos: -12.476003,-12.072022
+      parent: 2
+  - uid: 526
+    components:
+    - type: Transform
+      pos: -13.032779,-11.464826
+      parent: 2
   - uid: 1369
     components:
     - type: Transform
@@ -2825,6 +2835,17 @@ entities:
       parent: 2
 - proto: CP14BaseBroom
   entities:
+  - uid: 466
+    components:
+    - type: Transform
+      pos: -12.288021,-11.065651
+      parent: 2
+  - uid: 481
+    components:
+    - type: Transform
+      rot: 1.5707963267948966 rad
+      pos: -12.46799,-10.357254
+      parent: 2
   - uid: 1049
     components:
     - type: Transform
@@ -2908,6 +2929,17 @@ entities:
       parent: 2
 - proto: CP14BaseMop
   entities:
+  - uid: 491
+    components:
+    - type: Transform
+      rot: -1.5707963267948966 rad
+      pos: -17.349617,-11.234316
+      parent: 2
+  - uid: 507
+    components:
+    - type: Transform
+      pos: -17.405857,-11.256805
+      parent: 2
   - uid: 1409
     components:
     - type: Transform
@@ -56511,7 +56543,7 @@ entities:
     - type: Transform
       pos: -18.5,27.5
       parent: 2
-- proto: CP14IronDoorBlacksmith
+- proto: CP14IronDoorBlacksmith1
   entities:
   - uid: 1101
     components:
@@ -57859,65 +57891,20 @@ entities:
       parent: 2
 - proto: CP14SpawnPointAdventurer
   entities:
-  - uid: 2374
+  - uid: 536
     components:
     - type: Transform
-      pos: -38.5,2.5
+      pos: -30.5,-9.5
       parent: 2
-  - uid: 2382
+  - uid: 593
     components:
     - type: Transform
-      pos: 12.5,14.5
+      pos: -32.5,-9.5
       parent: 2
-  - uid: 2383
+  - uid: 690
     components:
     - type: Transform
-      pos: 21.5,15.5
-      parent: 2
-  - uid: 2384
-    components:
-    - type: Transform
-      pos: 7.5,4.5
-      parent: 2
-  - uid: 2385
-    components:
-    - type: Transform
-      pos: 7.5,-6.5
-      parent: 2
-  - uid: 2386
-    components:
-    - type: Transform
-      pos: 15.5,-5.5
-      parent: 2
-  - uid: 2387
-    components:
-    - type: Transform
-      pos: -6.5,-5.5
-      parent: 2
-  - uid: 2388
-    components:
-    - type: Transform
-      pos: -6.5,4.5
-      parent: 2
-  - uid: 2389
-    components:
-    - type: Transform
-      pos: -15.5,3.5
-      parent: 2
-  - uid: 2390
-    components:
-    - type: Transform
-      pos: -16.5,-30.5
-      parent: 2
-  - uid: 2391
-    components:
-    - type: Transform
-      pos: -5.5,-41.5
-      parent: 2
-  - uid: 2392
-    components:
-    - type: Transform
-      pos: -36.5,2.5
+      pos: -34.5,-9.5
       parent: 2
   - uid: 2393
     components:
@@ -57931,17 +57918,15 @@ entities:
       parent: 2
 - proto: CP14SpawnPointAlchemist
   entities:
-  - uid: 1380
+  - uid: 445
     components:
     - type: Transform
-      rot: 3.141592653589793 rad
-      pos: -4.5,-33.5
+      pos: -38.5,2.5
       parent: 2
-  - uid: 2148
+  - uid: 2390
     components:
     - type: Transform
-      rot: 3.141592653589793 rad
-      pos: 16.5,5.5
+      pos: -36.5,2.5
       parent: 2
 - proto: CP14SpawnPointBanker
   entities:
@@ -57971,10 +57956,15 @@ entities:
       parent: 2
 - proto: CP14SpawnPointBlacksmith
   entities:
-  - uid: 2321
+  - uid: 586
     components:
     - type: Transform
-      pos: -17.5,-2.5
+      pos: -34.5,2.5
+      parent: 2
+  - uid: 703
+    components:
+    - type: Transform
+      pos: -32.5,2.5
       parent: 2
 - proto: CP14SpawnPointCommandant
   entities:
@@ -76400,146 +76390,149 @@ entities:
     - type: Transform
       pos: 3.5,14.5
       parent: 2
-- proto: CP14WoodenDoor
+- proto: CP14WoodenDoorPersonalHouse1
   entities:
-  - uid: 445
-    components:
-    - type: Transform
-      pos: 7.5,6.5
-      parent: 2
-  - uid: 458
-    components:
-    - type: Transform
-      rot: -1.5707963267948966 rad
-      pos: 5.5,1.5
-      parent: 2
-  - uid: 466
-    components:
-    - type: Transform
-      rot: -1.5707963267948966 rad
-      pos: -5.5,1.5
-      parent: 2
-  - uid: 481
-    components:
-    - type: Transform
-      rot: 3.141592653589793 rad
-      pos: -7.5,6.5
-      parent: 2
-  - uid: 491
-    components:
-    - type: Transform
-      rot: -1.5707963267948966 rad
-      pos: 9.5,-2.5
-      parent: 2
-  - uid: 507
-    components:
-    - type: Transform
-      rot: -1.5707963267948966 rad
-      pos: 2.5,-5.5
-      parent: 2
-  - uid: 526
-    components:
-    - type: Transform
-      rot: -1.5707963267948966 rad
-      pos: -9.5,-7.5
-      parent: 2
-  - uid: 536
-    components:
-    - type: Transform
-      rot: -1.5707963267948966 rad
-      pos: -5.5,-3.5
-      parent: 2
-  - uid: 586
-    components:
-    - type: Transform
-      rot: 3.141592653589793 rad
-      pos: 13.5,-8.5
-      parent: 2
-  - uid: 593
-    components:
-    - type: Transform
-      pos: 12.5,-4.5
-      parent: 2
-  - uid: 690
-    components:
-    - type: Transform
-      rot: -1.5707963267948966 rad
-      pos: -14.5,1.5
-      parent: 2
-  - uid: 703
-    components:
-    - type: Transform
-      pos: -16.5,6.5
-      parent: 2
-  - uid: 735
-    components:
-    - type: Transform
-      pos: 18.5,11.5
-      parent: 2
-  - uid: 744
-    components:
-    - type: Transform
-      rot: 1.5707963267948966 rad
-      pos: 19.5,17.5
-      parent: 2
-  - uid: 753
-    components:
-    - type: Transform
-      pos: 13.5,11.5
-      parent: 2
-  - uid: 765
-    components:
-    - type: Transform
-      rot: -1.5707963267948966 rad
-      pos: 10.5,16.5
-      parent: 2
-  - uid: 1316
+  - uid: 2383
     components:
     - type: Transform
       rot: -1.5707963267948966 rad
       pos: -14.5,-32.5
       parent: 2
-  - uid: 1348
+  - uid: 2384
     components:
     - type: Transform
       rot: -1.5707963267948966 rad
       pos: -11.5,-27.5
       parent: 2
-  - uid: 1517
+- proto: CP14WoodenDoorPersonalHouse10
+  entities:
+  - uid: 2232
     components:
     - type: Transform
-      rot: 1.5707963267948966 rad
-      pos: -2.5,-39.5
+      rot: 3.141592653589793 rad
+      pos: 18.5,11.5
       parent: 2
-  - uid: 1520
+  - uid: 2321
+    components:
+    - type: Transform
+      rot: -1.5707963267948966 rad
+      pos: 19.5,17.5
+      parent: 2
+- proto: CP14WoodenDoorPersonalHouse2
+  entities:
+  - uid: 2385
     components:
     - type: Transform
       rot: -1.5707963267948966 rad
       pos: -7.5,-39.5
       parent: 2
-- proto: CP14WoodenDoorTavernAlchemy
+  - uid: 2386
+    components:
+    - type: Transform
+      rot: 1.5707963267948966 rad
+      pos: -2.5,-39.5
+      parent: 2
+- proto: CP14WoodenDoorPersonalHouse3
+  entities:
+  - uid: 1380
+    components:
+    - type: Transform
+      rot: -1.5707963267948966 rad
+      pos: -5.5,-3.5
+      parent: 2
+  - uid: 1517
+    components:
+    - type: Transform
+      rot: 1.5707963267948966 rad
+      pos: -9.5,-7.5
+      parent: 2
+- proto: CP14WoodenDoorPersonalHouse4
+  entities:
+  - uid: 2146
+    components:
+    - type: Transform
+      rot: 1.5707963267948966 rad
+      pos: -14.5,1.5
+      parent: 2
+  - uid: 2148
+    components:
+    - type: Transform
+      rot: 3.141592653589793 rad
+      pos: -16.5,6.5
+      parent: 2
+- proto: CP14WoodenDoorPersonalHouse5
+  entities:
+  - uid: 753
+    components:
+    - type: Transform
+      pos: -7.5,6.5
+      parent: 2
+  - uid: 765
+    components:
+    - type: Transform
+      rot: 1.5707963267948966 rad
+      pos: -5.5,1.5
+      parent: 2
+- proto: CP14WoodenDoorPersonalHouse6
+  entities:
+  - uid: 1316
+    components:
+    - type: Transform
+      rot: 1.5707963267948966 rad
+      pos: 9.5,-2.5
+      parent: 2
+  - uid: 1348
+    components:
+    - type: Transform
+      rot: -1.5707963267948966 rad
+      pos: 2.5,-5.5
+      parent: 2
+- proto: CP14WoodenDoorPersonalHouse7
+  entities:
+  - uid: 1520
+    components:
+    - type: Transform
+      rot: 3.141592653589793 rad
+      pos: 13.5,-8.5
+      parent: 2
+  - uid: 2009
+    components:
+    - type: Transform
+      pos: 12.5,-4.5
+      parent: 2
+- proto: CP14WoodenDoorPersonalHouse8
+  entities:
+  - uid: 735
+    components:
+    - type: Transform
+      pos: 7.5,6.5
+      parent: 2
+  - uid: 744
+    components:
+    - type: Transform
+      rot: 1.5707963267948966 rad
+      pos: 5.5,1.5
+      parent: 2
+- proto: CP14WoodenDoorPersonalHouse9
+  entities:
+  - uid: 2374
+    components:
+    - type: Transform
+      rot: 3.141592653589793 rad
+      pos: 13.5,11.5
+      parent: 2
+  - uid: 2382
+    components:
+    - type: Transform
+      rot: 1.5707963267948966 rad
+      pos: 10.5,16.5
+      parent: 2
+- proto: CP14WoodenDoorTavernAlchemy1
   entities:
   - uid: 1292
     components:
     - type: Transform
       pos: -4.5,-29.5
-      parent: 2
-  - uid: 2009
-    components:
-    - type: Transform
-      pos: 16.5,6.5
-      parent: 2
-  - uid: 2146
-    components:
-    - type: Transform
-      rot: 3.141592653589793 rad
-      pos: 12.5,2.5
-      parent: 2
-  - uid: 2232
-    components:
-    - type: Transform
-      rot: 3.141592653589793 rad
-      pos: 17.5,3.5
       parent: 2
   - uid: 2259
     components:
@@ -76552,6 +76545,25 @@ entities:
     - type: Transform
       rot: -1.5707963267948966 rad
       pos: -9.5,-34.5
+      parent: 2
+- proto: CP14WoodenDoorTavernAlchemy2
+  entities:
+  - uid: 2387
+    components:
+    - type: Transform
+      rot: 3.141592653589793 rad
+      pos: 16.5,6.5
+      parent: 2
+  - uid: 2388
+    components:
+    - type: Transform
+      pos: 12.5,2.5
+      parent: 2
+  - uid: 2389
+    components:
+    - type: Transform
+      rot: 3.141592653589793 rad
+      pos: 17.5,3.5
       parent: 2
 - proto: CP14WoodenDoorTavernDorms1
   entities:
