--- a/Resources/Prototypes/_CP14/Maps/arenas.yml
+++ b/Resources/Prototypes/_CP14/Maps/arenas.yml
@@ -65,7 +65,19 @@
             #CP14GuardCommander: [1, 1]
         - type: CP14StationKeyDistribution
           keys:
-            PersonalHouse: 10
-            TavernDorms: 3
-            Alchemist: 2
-            Blacksmith: 1
+          - TavernDorms1
+          - TavernDorms2
+          - TavernDorms3
+          - Alchemy1
+          - Alchemy2
+          - Blacksmith1
+          - PersonalHouse1
+          - PersonalHouse2
+          - PersonalHouse3
+          - PersonalHouse4
+          - PersonalHouse5
+          - PersonalHouse6
+          - PersonalHouse7
+          - PersonalHouse8
+          - PersonalHouse9
+          - PersonalHouse10
