--- a/Resources/migration.yml
+++ b/Resources/migration.yml
@@ -171,6 +171,8 @@ CP14BasePickaxe: CP14ModularIronPickaxe
 
 #2024-02-12
 CP14WoodenDoorTavernAlchemy: CP14WoodenDoorTavernAlchemy1
+CP14WoodenDoorTavernAlchemyMirrored: CP14WoodenDoorTavernAlchemyMirrored1
+CP14IronDoorBlacksmith: CP14IronDoorBlacksmith1
 CP14IronDoorMirroredBlacksmith: CP14IronDoorMirroredBlacksmith1
 
 # <---> CrystallEdge migration zone end
