--- a/Resources/Prototypes/_CP14/Entities/Objects/Keys/bank.yml
+++ b/Resources/Prototypes/_CP14/Entities/Objects/Keys/bank.yml
@@ -23,6 +23,7 @@
   - type: Sprite
     layers:
     - state: vault_key
+      map: [ "random" ]
   - type: RandomSprite
     available:
     - random:
