--- a/Resources/migration.yml
+++ b/Resources/migration.yml
@@ -174,6 +174,8 @@ CP14WoodenDoorTavernAlchemy: CP14WoodenDoorTavernAlchemy1
 CP14WoodenDoorTavernAlchemyMirrored: CP14WoodenDoorTavernAlchemyMirrored1
 CP14IronDoorBlacksmith: CP14IronDoorBlacksmith1
 CP14IronDoorMirroredBlacksmith: CP14IronDoorMirroredBlacksmith1
+CP14IronDoorWindowedBlacksmith: CP14IronDoorBlacksmith1
+CP14IronDoorWindowedMirroredBlacksmith: CP14IronDoorMirroredBlacksmith1
 
 # <---> CrystallEdge migration zone end
 
