--- a/Resources/Prototypes/_CP14/LockCategories/lockTypes.yml
+++ b/Resources/Prototypes/_CP14/LockCategories/lockTypes.yml
@@ -3,79 +3,95 @@
 - type: CP14LockType
   id: BankEntrance
   complexity: 3
+  name: cp14-lock-shape-bank-entrance
 
 - type: CP14LockType
   id: BankStaff
+  complexity: 4
+  name: cp14-lock-shape-bank-staff
+
+- type: CP14LockType
+  id: BankCommandantRoom
   complexity: 5
+  name: cp14-lock-shape-bank-commandant
+
+- type: CP14LockType
+  id: BankSafe
+  complexity: 6
+  name: cp14-lock-shape-bank-safe
 
 - type: CP14LockType
   id: BankVault
   complexity: 7
-
-- type: CP14LockType
-  id: BankCommandantRoom
-  complexity: 7
-
-- type: CP14LockType
-  id: BankSafe
-  complexity: 5
+  name: cp14-lock-shape-bank-vault
 
 # Tavern 
 
 - type: CP14LockType
   id: TavernHall
   complexity: 3
+  name: cp14-lock-shape-tavern-hall
 
 - type: CP14LockType
   id: TavernStaff
-  complexity: 5
+  complexity: 4
+  name: cp14-lock-shape-tavern-staff
 
 - type: CP14LockType
   id: TavernDorms1
   group: TavernDorms
   complexity: 3
+  name: cp14-lock-shape-tavern-dorm1
 
 - type: CP14LockType
   id: TavernDorms2
   group: TavernDorms
   complexity: 3
+  name: cp14-lock-shape-tavern-dorm2
 
 - type: CP14LockType
   id: TavernDorms3
   group: TavernDorms
   complexity: 3
+  name: cp14-lock-shape-tavern-dorm3
 
 - type: CP14LockType
   id: TavernDorms4
   group: TavernDorms
   complexity: 3
+  name: cp14-lock-shape-tavern-dorm4
 
 - type: CP14LockType
   id: TavernDorms5
   group: TavernDorms
   complexity: 3
+  name: cp14-lock-shape-tavern-dorm5
 
 # Mercenary 
 
 - type: CP14LockType
   id: Alchemy1
   group: Alchemist
-  complexity: 5
+  complexity: 4
+  name: cp14-lock-shape-alchemist1
   
 - type: CP14LockType
   id: Alchemy2
   group: Alchemist
-  complexity: 5
+  complexity: 4
+  name: cp14-lock-shape-alchemist2
 
 - type: CP14LockType
   id: Blacksmith1
   group: Blacksmith
-  complexity: 5
+  complexity: 4
+  name: cp14-lock-shape-blacksmith1
 
 - type: CP14LockType
   id: Blacksmith2
   group: Blacksmith
-  complexity: 5
+  complexity: 4
+  name: cp14-lock-shape-blacksmith2
 
 # Personal house
 
@@ -83,48 +99,58 @@
   id: PersonalHouse1
   group: PersonalHouse
   complexity: 3
+  name: cp14-lock-shape-personalhouse1
 
 - type: CP14LockType
   id: PersonalHouse2
   group: PersonalHouse
   complexity: 3
+  name: cp14-lock-shape-personalhouse2
 
 - type: CP14LockType
   id: PersonalHouse3
   group: PersonalHouse
   complexity: 3
+  name: cp14-lock-shape-personalhouse3
 
 - type: CP14LockType
   id: PersonalHouse4
   group: PersonalHouse
   complexity: 3
+  name: cp14-lock-shape-personalhouse4
 
 - type: CP14LockType
   id: PersonalHouse5
   group: PersonalHouse
   complexity: 3
+  name: cp14-lock-shape-personalhouse5
 
 - type: CP14LockType
   id: PersonalHouse6
   group: PersonalHouse
   complexity: 3
+  name: cp14-lock-shape-personalhouse6
 
 - type: CP14LockType
   id: PersonalHouse7
   group: PersonalHouse
   complexity: 3
+  name: cp14-lock-shape-personalhouse7
 
 - type: CP14LockType
   id: PersonalHouse8
   group: PersonalHouse
   complexity: 3
+  name: cp14-lock-shape-personalhouse8
 
 - type: CP14LockType
   id: PersonalHouse9
   group: PersonalHouse
   complexity: 3
+  name: cp14-lock-shape-personalhouse9
 
 - type: CP14LockType
   id: PersonalHouse10
   group: PersonalHouse
   complexity: 3
+  name: cp14-lock-shape-personalhouse10
