Key distribution system (#625)
* data restruct

* yay

* Update arenas.yml

* fixes

* auto labeling

* shuffle

--- a/Resources/Prototypes/_CP14/Entities/Objects/Keys/keyrings.yml
+++ b/Resources/Prototypes/_CP14/Entities/Objects/Keys/keyrings.yml
@@ -46,11 +46,11 @@
     contents:
     - id: CP14KeyTavernHall
     - id: CP14KeyTavernStaff
-    - id: CP14KeyTavernDorms1
-    - id: CP14KeyTavernDorms2
-    - id: CP14KeyTavernDorms3
-    - id: CP14KeyTavernDorms4
-    - id: CP14KeyTavernDorms5
+    - id: CP14KeyTavernDormsAbstract # TODO: Move to main innkeeper
+    - id: CP14KeyTavernDormsAbstract
+    - id: CP14KeyTavernDormsAbstract
+    - id: CP14KeyTavernDormsAbstract
+    - id: CP14KeyTavernDormsAbstract
 
 - type: entity
   parent: CP14BaseKeyRing
@@ -59,7 +59,16 @@
   components:
   - type: StorageFill
     contents:
-    - id: CP14KeyBlacksmith
+    - id: CP14KeyTavernBlacksmithAbstract
+
+- type: entity
+  parent: CP14BaseKeyRing
+  id: CP14KeyRingPersonalHouse
+  suffix: Personal House
+  components:
+  - type: StorageFill
+    contents:
+    - id: CP14KeyPersonalHouseAbstract
 
 - type: entity
   parent: CP14BaseKeyRing
@@ -68,7 +77,7 @@
   components:
   - type: StorageFill
     contents:
-    - id: CP14KeyAlchemy
+    - id: CP14KeyTavernAlchemistAbstract
 
 - type: entity
   parent: CP14BaseKeyRing
