--- a/Resources/Prototypes/_CP14/Maps/arenas.yml
+++ b/Resources/Prototypes/_CP14/Maps/arenas.yml
@@ -58,8 +58,26 @@
           availableJobs:
             CP14Adventurer: [ -1, -1 ]
             CP14Alchemist: [ 2, 4 ]
-            CP14Blacksmith: [ 1, 1 ]
+            CP14Blacksmith: [ 1, 2 ]
             CP14Innkeeper: [ 3, 4 ]
             CP14Commandant: [1, 1]
             CP14Banker: [3, 4]
             #CP14GuardCommander: [1, 1]
+        - type: CP14StationKeyDistribution
+          keys:
+          - TavernDorms1
+          - TavernDorms2
+          - TavernDorms3
+          - Alchemy1
+          - Alchemy2
+          - Blacksmith1
+          - PersonalHouse1
+          - PersonalHouse2
+          - PersonalHouse3
+          - PersonalHouse4
+          - PersonalHouse5
+          - PersonalHouse6
+          - PersonalHouse7
+          - PersonalHouse8
+          - PersonalHouse9
+          - PersonalHouse10
