--- a/Resources/Prototypes/Entities/Objects/base_item.yml
+++ b/Resources/Prototypes/Entities/Objects/base_item.yml
@@ -34,7 +34,8 @@
           bounds: "-0.25,-0.25,0.25,0.25"
         density: 20
         mask:
-        - ItemMask
+        #- ItemMask # CP14 swap ItemMask to Impassable only
+        - Impassable
         restitution: 0.3  # fite me
         friction: 0.2
   - type: Sprite
