--- a/Resources/Prototypes/_CP14/Entities/Structures/Fence/iron_grille.yml
+++ b/Resources/Prototypes/_CP14/Entities/Structures/Fence/iron_grille.yml
@@ -41,46 +41,10 @@
       fix1:
         shape:
           !type:PhysShapeAabb
-          bounds: "-0.49,-0.49,0.49,-0.29"
+          bounds: "-0.5,-0.15,0.5,0.15"
         density: 1000
         mask:
         - FullTileMask
-        layer:
-        - MidImpassable
-        - LowImpassable
-        - WallLayer
-
-- type: entity
-  parent: 
-  - CP14BaseFenceCorner
-  - CP14FenceIronGrilleBase
-  id: CP14FenceIronGrilleCorner
-  suffix: Corner
-  components:
-  - type: Icon
-    state: corner
-  - type: Sprite
-    state: corner
-  - type: Fixtures
-    fixtures:
-      fix1:
-        shape:
-          !type:PhysShapeAabb
-          bounds: "-0.49,-0.49,0.49,-0.29"
-        density: 1000
-        mask:
-        - TableMask
-        layer:
-        - MidImpassable
-        - LowImpassable
-        - WallLayer
-      fix2:
-        shape:
-          !type:PhysShapeAabb
-          bounds: "0.29,-0.49,0.49,0.49"
-        density: 1000
-        mask:
-        - TableMask
         layer:
         - MidImpassable
         - LowImpassable
@@ -105,3 +69,16 @@
       collection: MetalScrape
     closeSound:
       collection: MetalScrape
+  - type: Fixtures
+    fixtures:
+      fix1:
+        shape:
+          !type:PhysShapeAabb
+          bounds: "-0.5,-0.15,0.5,0.15"
+        density: 1000
+        mask:
+        - FullTileMask
+        layer:
+        - MidImpassable
+        - LowImpassable
+        - WallLayer
