--- a/Resources/Prototypes/_CP14/Entities/Structures/Doors/Locked/guard.yml
+++ b/Resources/Prototypes/_CP14/Entities/Structures/Doors/Locked/guard.yml
@@ -17,7 +17,7 @@
   suffix: Guard Commander
   components:
   - type: CP14Lock
-    autoGenerateShape: GuardCommandant
+    autoGenerateShape: GuardCommander
   - type: Lock
     locked: true
 
