--- a/Resources/Prototypes/_CP14/LockCategories/lockTypes.yml
+++ b/Resources/Prototypes/_CP14/LockCategories/lockTypes.yml
@@ -160,19 +160,19 @@
 - type: CP14LockType
   id: GuardEntrance
   complexity: 3
-  #name
+  name: cp14-lock-shaper-guard-entrance
 
 - type: CP14LockType
   id: Guard
   complexity: 5
-  #name
+  name: cp14-lock-shaper-guard-staff
 
 - type: CP14LockType
-  id: GuardCommandant
+  id: GuardCommander
   complexity: 7
-  #name
+  name: cp14-lock-shaper-guard-commander
 
 - type: CP14LockType
   id: GuardWeaponStorage
   complexity: 7
-  #name
+  name: cp14-lock-shaper-guard-weapon-storage
