--- a/Resources/Prototypes/_CP14/Entities/Structures/Decorations/flags_wallmount.yml
+++ b/Resources/Prototypes/_CP14/Entities/Structures/Decorations/flags_wallmount.yml
@@ -1,12 +1,12 @@
 - type: entity
   id: CP14WallmountFlagBase
   abstract: true
-  parent: 
+  parent:
   - CP14BaseWallmount
   - CP14BaseFlammableSpreadingStrong
   categories: [ ForkFiltered ]
   name: tapestry
-  description: A piece of cloth pinned to the wall. 
+  description: A piece of cloth pinned to the wall.
   components:
   - type: Sprite
     sprite: _CP14/Structures/Decoration/flags_wallmount.rsi
@@ -60,6 +60,7 @@
   - type: Sprite
     layers:
     - state: fill_mercenary #TODO: Icon
+    - state: icon_tavern
 
 # Bank
 
@@ -100,8 +101,45 @@
   parent: CP14WallmountFlagBase
   id: CP14WallmountFlagBankCommandant
   name: commandant tapestry
-  description: A tapestry with a ?? symbol indicating that the Commandant lives here.
+  description: A tapestry with a star symbol indicating that the Commandant lives here.
   components:
   - type: Sprite
     layers:
-    - state: fill_bank #TODO: Icon
+    - state: fill_bank
+    - state: icon_star
+
+# Guard
+
+- type: entity
+  parent: CP14WallmountFlagBase
+  id: CP14WallmountFlagGuardSwords
+  name: guard tapestry
+  description: A tapestry with a swords symbol denoting that the guards are here.
+  components:
+  - type: Sprite
+    layers:
+    - state: fill_guard
+    - state: icon_swords
+
+
+- type: entity
+  parent: CP14WallmountFlagBase
+  id: CP14WallmountFlagGuardShield
+  name: guard tapestry
+  description: A tapestry with a shield symbol denoting that the guards are here.
+  components:
+  - type: Sprite
+    layers:
+    - state: fill_guard
+    - state: icon_shield
+
+- type: entity
+  parent: CP14WallmountFlagBase
+  id: CP14WallmountFlagGuardCommandant
+  name: guard commandant tapestry
+  description: A tapestry with a star symbol indicating that the Guard Commandant lives here.
+  components:
+  - type: Sprite
+    layers:
+    - state: fill_guard
+    - state: icon_star
