--- a/Resources/Prototypes/_CP14/Catalog/Fills/closets.yml
+++ b/Resources/Prototypes/_CP14/Catalog/Fills/closets.yml
@@ -114,3 +114,29 @@
   #    - id: CP14StampDenied
   #    - id: CP14StampApproved
   #    - id: CP14StampCommandant
+
+- type: entity
+  parent: CP14WoodenCloset
+  id: CP14WoodenClosetGuardFilled
+  suffix: Guard, Filled
+  #components:
+  #- type: StorageFill
+  #  contents:
+  #    - id: CP14KeyRingCommandant
+  #    - id: HandLabeler #TODO custom cp14 labeler
+  #    - id: CP14StampDenied
+  #    - id: CP14StampApproved
+  #    - id: CP14StampCommandant
+
+- type: entity
+  parent: CP14WoodenCloset
+  id: CP14WoodenClosetGuardCommanderFilled
+  suffix: Guard Commander, Filled
+  #components:
+  #- type: StorageFill
+  #  contents:
+  #    - id: CP14KeyRingCommandant
+  #    - id: HandLabeler #TODO custom cp14 labeler
+  #    - id: CP14StampDenied
+  #    - id: CP14StampApproved
+  #    - id: CP14StampCommandant
