--- a/Resources/Prototypes/_CP14/Entities/Structures/Doors/Locked/personalHouse.yml
+++ b/Resources/Prototypes/_CP14/Entities/Structures/Doors/Locked/personalHouse.yml
@@ -99,3 +99,53 @@
     autoGenerateShape: PersonalHouse10
   - type: Lock
     locked: true
+
+- type: entity
+  parent: CP14WoodenDoor
+  id: CP14WoodenDoorPersonalHouse11
+  suffix: PersonalHouse11
+  components:
+  - type: CP14Lock
+    autoGenerateShape: PersonalHouse10
+  - type: Lock
+    locked: true
+
+- type: entity
+  parent: CP14WoodenDoor
+  id: CP14WoodenDoorPersonalHouse12
+  suffix: PersonalHouse12
+  components:
+  - type: CP14Lock
+    autoGenerateShape: PersonalHouse10
+  - type: Lock
+    locked: true
+
+- type: entity
+  parent: CP14WoodenDoor
+  id: CP14WoodenDoorPersonalHouse13
+  suffix: PersonalHouse13
+  components:
+  - type: CP14Lock
+    autoGenerateShape: PersonalHouse10
+  - type: Lock
+    locked: true
+
+- type: entity
+  parent: CP14WoodenDoor
+  id: CP14WoodenDoorPersonalHouse14
+  suffix: PersonalHouse14
+  components:
+  - type: CP14Lock
+    autoGenerateShape: PersonalHouse10
+  - type: Lock
+    locked: true
+
+- type: entity
+  parent: CP14WoodenDoor
+  id: CP14WoodenDoorPersonalHouse15
+  suffix: PersonalHouse15
+  components:
+  - type: CP14Lock
+    autoGenerateShape: PersonalHouse10
+  - type: Lock
+    locked: true
