cool guard helmet

--- a/Resources/migration.yml
+++ b/Resources/migration.yml
@@ -178,6 +178,9 @@ CP14IronDoorWindowedBlacksmith: CP14IronDoorBlacksmith1
 CP14IronDoorWindowedMirroredBlacksmith: CP14IronDoorMirroredBlacksmith1
 CP14FenceIronGrilleCorner: null
 
+#2024-04-12
+CP14ClothingShirtGuardsChainmailShirtWB: CP14ClothingShirtGuardsChainmailShirtB
+
 # <---> CrystallEdge migration zone end
 
 
