--- a/Resources/Prototypes/_CP14/Loadouts/Jobs/guard.yml
+++ b/Resources/Prototypes/_CP14/Loadouts/Jobs/guard.yml
@@ -18,9 +18,14 @@
 - type: loadoutGroup
   id: CP14GuardHead
   name: cp14-loadout-guard-head
-  minLimit: 0
+  minLimit: 1
   loadouts:
-  - CP14ClothingHeadMetalHeadband
+  - CP14ClothingHeadGuardHelmet
+
+- type: loadout
+  id: CP14ClothingHeadGuardHelmet
+  equipment:
+    head: CP14ClothingHeadGuardHelmet
 
 # Pants
 
