--- a/Resources/Prototypes/_CP14/Entities/Objects/Weapons/ModularPresets/sword.yml
+++ b/Resources/Prototypes/_CP14/Entities/Objects/Weapons/ModularPresets/sword.yml
@@ -12,3 +12,21 @@
   - type: CP14ModularCraftAutoAssemble
     details:
     - BladeIronSword
+
+- type: entity
+  id: CP14ModularGuardHalberd
+  parent: CP14ModularGripIronLongGuard
+  name: "guard's halberd"
+  description: The standard issue armament of the imperial guard. A long iron halberd adorned with blue feathers and brass
+  components:
+  - type: Sprite
+    layers:
+    - state: icon
+    - sprite: _CP14/Objects/ModularTools/iron_sword.rsi
+      state: icon
+    - sprite: _CP14/Objects/ModularTools/Garde/iron_sharp.rsi
+      state: icon
+  - type: CP14ModularCraftAutoAssemble
+    details:
+    - BladeIronSword
+    - GardeSharpIron
