--- a/Resources/Prototypes/_CP14/Catalog/Fills/closets.yml
+++ b/Resources/Prototypes/_CP14/Catalog/Fills/closets.yml
@@ -106,37 +106,46 @@
   parent: CP14WoodenCloset
   id: CP14WoodenClosetBlacksmithFilled
   suffix: Blacksmith, Filled
-  #components:
-  #- type: StorageFill
-  #  contents:
-  #    - id: CP14KeyRingCommandant
-  #    - id: HandLabeler #TODO custom cp14 labeler
-  #    - id: CP14StampDenied
-  #    - id: CP14StampApproved
-  #    - id: CP14StampCommandant
+  components:
+  - type: StorageFill
+    contents:
+      - id: HandLabeler #TODO custom cp14 labeler
+      - id: CP14WoodenPlanks10
+      - id: CP14Nail10
+      - id: CP14CopperBar10
+      - id: CP14IronBar5
 
 - type: entity
   parent: CP14WoodenCloset
   id: CP14WoodenClosetGuardFilled
   suffix: Guard, Filled
-  #components:
-  #- type: StorageFill
-  #  contents:
-  #    - id: CP14KeyRingCommandant
-  #    - id: HandLabeler #TODO custom cp14 labeler
-  #    - id: CP14StampDenied
-  #    - id: CP14StampApproved
-  #    - id: CP14StampCommandant
+  components:
+  - type: StorageFill
+    contents:
+      - id: CP14Rope
+      - id: CP14Rope
+      - id: CP14ModularGuardHalberd
+      - id: CP14BaseShield
+      - id: CP14ModularGripIronLongGuard
+      - id: CP14ModularGripIronLongGuard
+      - id: CP14BaseLightCrossbow
+      - id: CP14EnergyCrystalSmall
+      - id: CP14CrystalLampBlueEmpty
 
 - type: entity
   parent: CP14WoodenCloset
   id: CP14WoodenClosetGuardCommanderFilled
   suffix: Guard Commander, Filled
-  #components:
-  #- type: StorageFill
-  #  contents:
-  #    - id: CP14KeyRingCommandant
-  #    - id: HandLabeler #TODO custom cp14 labeler
-  #    - id: CP14StampDenied
-  #    - id: CP14StampApproved
-  #    - id: CP14StampCommandant
+  components:
+  - type: StorageFill
+    contents:
+      - id: CP14Rope
+      - id: CP14Rope
+      - id: CP14ModularGuardHalberd
+      - id: CP14BaseShield
+      - id: CP14ModularGripIronLongGuard
+      - id: CP14ModularGripIronLongGuard
+      - id: CP14BaseLightCrossbow
+      - id: CP14EnergyCrystalSmall
+      - id: CP14CrystalLampBlueEmpty
+      - id: CP14StampGuardCommander
