--- a/Resources/Prototypes/_CP14/Roles/Jobs/Guard/guard_commander.yml
+++ b/Resources/Prototypes/_CP14/Roles/Jobs/Guard/guard_commander.yml
@@ -19,4 +19,5 @@
 - type: startingGear
   id: CP14GuardCommanderGear
   equipment:
+    keys: CP14KeyRingGuardCommander
     belt1: CP14WalletFilledTest
