--- a/Resources/migration.yml
+++ b/Resources/migration.yml
@@ -180,6 +180,7 @@ CP14FenceIronGrilleCorner: null
 
 #2024-04-12
 CP14ClothingShirtGuardsChainmailShirtWB: CP14ClothingShirtGuardsChainmailShirtB
+CP14KeyRingGuardCommandant: CP14KeyRingGuardCommander
 
 # <---> CrystallEdge migration zone end
 
