--- a/Resources/migration.yml
+++ b/Resources/migration.yml
@@ -70,7 +70,7 @@ CP14WallpaperPink30: CP14WallpaperPurple
 
 #2024-09-25
 CP14IronGrilleStraight: CP14FenceIronGrilleStraight
-CP14IronGrilleCorner: CP14FenceIronGrilleCorner
+CP14IronGrilleCorner: null
 CP14IronGrilleGate: CP14FenceIronGrilleGate
 CP14IronGrilleTJunction: null
 CP14FenceWoodSmallTJunction: null
