--- a/Resources/Prototypes/_CP14/Loadouts/role_loadouts.yml
+++ b/Resources/Prototypes/_CP14/Loadouts/role_loadouts.yml
@@ -68,6 +68,7 @@
   - CP14GeneralShoes
   - CP14GeneralBack
   - CP14GeneralTrinkets
+  - CP14GuardSpells
 
 - type: roleLoadout
   id: JobCP14Guard
@@ -82,6 +83,7 @@
   - CP14GeneralShoes
   - CP14GeneralBack
   - CP14GeneralTrinkets
+  - CP14GuardSpells
 
 - type: roleLoadout
   id: JobCP14Commandant
