map fixes, move crystalls from houses into startgear

--- a/Resources/Prototypes/_CP14/Roles/Jobs/Bank/banker.yml
+++ b/Resources/Prototypes/_CP14/Roles/Jobs/Bank/banker.yml
@@ -9,6 +9,10 @@
 
 - type: startingGear
   id: CP14BankerGear
+  storage:
+    back:
+    - CP14EnergyCrystalSmall
+    - CP14EnergyCrystalSmall
   equipment:
     belt1: CP14WalletFilledTest
     keys: CP14KeyRingBanker
