--- a/Resources/Prototypes/_CP14/Roles/Jobs/Mercenary/blacksmith.yml
+++ b/Resources/Prototypes/_CP14/Roles/Jobs/Mercenary/blacksmith.yml
@@ -13,6 +13,10 @@
 
 - type: startingGear
   id: CP14BlacksmithGear
+  storage:
+    back:
+    - CP14EnergyCrystalSmall
+    - CP14EnergyCrystalSmall
   equipment:
     belt1: CP14WalletFilledTest
     keys: CP14KeyRingBlacksmith
