--- a/Resources/Prototypes/_CP14/Roles/Jobs/Mercenary/innkeeper.yml
+++ b/Resources/Prototypes/_CP14/Roles/Jobs/Mercenary/innkeeper.yml
@@ -9,6 +9,9 @@
 
 - type: startingGear
   id: CP14InnkeeperGear
+  storage:
+    back:
+    - CP14EnergyCrystalSmall
   equipment:
     belt1: CP14WalletFilledTest
     keys: CP14KeyRingInnkeeper
