--- a/Resources/Prototypes/_CP14/Catalog/Cargo/crates.yml
+++ b/Resources/Prototypes/_CP14/Catalog/Cargo/crates.yml
@@ -42,6 +42,9 @@
       - id: CP14Inkwell 
         amount: 1
         prob: 0.2
+      - id: CP14BookImperialLawsHandBook 
+        amount: 1
+        prob: 0.5
 
 - type: entity
   parent: CP14BrassChest
@@ -69,10 +72,56 @@
   - type: StorageFill
     contents:
       - id: CP14DemiplanKey
-        amount: 9
+        amount: 4
       - id: CP14DemiplanKey
         amount: 1
         prob: 0.5
       - id: CP14DemiplanKey
         amount: 1
         prob: 0.5
+
+- type: entity
+  parent: CP14BrassChest
+  id: CP14BrassChestFilledWood
+  suffix: Wood
+  components:
+  - type: StorageFill
+    contents:
+      - id: CP14WoodenPlanks10
+        amount: 5
+        # Gift
+      - id: CP14WoodLog
+        amount: 2
+        prob: 0.5
+      - id: CP14WoodLog
+        amount: 2
+        prob: 0.4
+      - id: CP14WoodLog
+        amount: 2
+        prob: 0.3
+
+- type: entity
+  parent: CP14BrassChest
+  id: CP14BrassChestFilledFabric
+  suffix: Fabric
+  components:
+  - type: StorageFill
+    contents:
+      - id: CP14String
+        amount: 10
+      - id: CP14Cloth10
+        amount: 3
+
+- type: entity
+  parent: CP14BrassChest
+  id: CP14BrassChestFilledEnergyCrystals
+  suffix: EnergyCrystals
+  components:
+  - type: StorageFill
+    contents:
+      - id: CP14EnergyCrystalSmallEmpty
+        amount: 5
+      - id: CP14EnergyCrystalMediumEmpty
+        amount: 3
+      - id: CP14ManaOperationGlove
+        amount: 2
