nerf skeleton, bone halberd

--- a/Resources/Prototypes/_CP14/Entities/Objects/ModularTools/Blade/sword.yml
+++ b/Resources/Prototypes/_CP14/Entities/Objects/ModularTools/Blade/sword.yml
@@ -22,3 +22,15 @@
   - type: CP14ModularCraftPart
     possibleParts:
     - BladeIronSword
+
+- type: entity
+  parent: CP14ModularBladeSwordBase
+  id: CP14ModularBladeBoneSword
+  name: bone sword blade
+  components:
+  - type: Sprite
+    sprite: _CP14/Objects/ModularTools/Blade/Sword/bone_sword.rsi
+    state: icon
+  - type: CP14ModularCraftPart
+    possibleParts:
+    - BladeBoneSword
