--- a/Resources/Prototypes/_CP14/Entities/Objects/Weapons/ModularPresets/sword.yml
+++ b/Resources/Prototypes/_CP14/Entities/Objects/Weapons/ModularPresets/sword.yml
@@ -30,3 +30,18 @@
     details:
     - BladeIronSword
     - GardeSharpIron
+
+- type: entity
+  id: CP14ModularSkeletonHalberd
+  parent: CP14ModularGripWoodenLong
+  name: bone halberd
+  description: Monstrous weapons of bone and copper.
+  components:
+  - type: Sprite
+    layers:
+    - state: icon
+    - sprite: _CP14/Objects/ModularTools/Blade/Sword/bone_sword.rsi
+      state: icon
+  - type: CP14ModularCraftAutoAssemble
+    details:
+    - BladeBoneSword
