--- a/Resources/Prototypes/_CP14/Loadouts/Misc/undead_startinggear.yml
+++ b/Resources/Prototypes/_CP14/Loadouts/Misc/undead_startinggear.yml
@@ -56,7 +56,6 @@
   id: CP14MobSkeleton
   equipment:
     pants: CP14ClothingPantsLoincloth
-    neck: CP14ModularIronSword
-    belt1: CP14ModularIronDagger
+    neck: CP14ModularSkeletonHalberd
   inhand:
     - CP14TorchIgnited
