--- a/Resources/Prototypes/_CP14/Entities/Mobs/Species/skeleton.yml
+++ b/Resources/Prototypes/_CP14/Entities/Mobs/Species/skeleton.yml
@@ -92,19 +92,19 @@
         !type:DamageTrigger
         damage: 50
       behaviors:
-      - !type:GibBehavior { }
+      - !type:GibBehavior
   - type: Vocal
     sounds:
       Male: Skeleton
       Female: Skeleton
       Unsexed: Skeleton
-  #- type: ReplacementAccent
-  #  accent: Skeleton
+  - type: SkeletonAccent
   - type: FireVisuals
     alternateState: Standing #TODO - custom visuals
   - type: ContainerContainer
   - type: Inventory
     templateId: CP14Human
+  - type: TransferMindOnGib
 
 - type: entity
   parent: CP14BaseSpeciesDummy
