--- a/Resources/Prototypes/_CP14/Entities/Objects/ModularTools/Magic/ring.yml
+++ b/Resources/Prototypes/_CP14/Entities/Objects/ModularTools/Magic/ring.yml
@@ -18,6 +18,7 @@
     startProtoPart: CP14ClothingMagicRingBase
     startSlots:
     - RingMagicCrystal1
+  - type: CP14MagicManacostModify
 
 # Blue ring
 - type: entity
@@ -30,3 +31,5 @@
     color: "#87CEEB"
   - type: Sprite
     state: brass_ring_blue
+  - type: CP14MagicManacostModify
+    globalModifier: 0.9
